[package]
name = "enc_rust"
version = "0.2.0"
edition = "2021"
authors = ["supinie <joshua@supinie.com>"]

description = "A pure rust implementation of the Module-Lattice-based standards ML-KEM and (soon) ML-DSA, also known as the PQC scheme Crystals Kyber and Dilithium."
readme = "README.md"
keywords = ["cryptography", "post-quantum", "kyber", "no_std", "ml-kem"]
categories = ["cryptography", "no-std", "no-std::no-alloc"]

repository = "https://github.com/supinie/enc_rust"

license = "GPL-3.0-or-later"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
decap_key = [] # Use the true key instead of seed for PrivateKey. Default uses seed.

[profile.release]
opt-level = "s"
lto = false
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true

[dependencies]
byteorder = "1.4.3"
more-asserts = "0.3.1"
num_enum = { version = "0.7.1", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha3 = "0.10.8"
subtle = { version = "2.5.0", default-features = false }
tinyvec = "1.6.0"
zeroize = { version = "1.7.0", default-features = false }

[dev-dependencies]
rand = "0.8.5"
proptest = "1.4.0"
criterion = "0.5.1"

# [workspace]
# members = ["src/kyber"]
# default-members = ["src/kyber"]

[[bench]]
name = "api"
harness = false
