[package]
name = "kyber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["cargo"] }
kyber1024 = { version = "0.1.0", path = "../kyber1024" }
kyber512 = { version = "0.1.0", path = "../kyber512" }
kyber768 = { version = "0.1.0", path = "../kyber768" }
